<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">MySecretSantas</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="button_add_new_secret_santa">Wichteln erstellen</string>
    <string name="button_add_participants">+</string>
    <string name="button_add_secret_santa">Secret Santa erstellen</string>
    <string name="button_add_wish">Wunsch hinzufügen</string>
    <string name="button_go_to_log_in">Ich habe bereits ein Konto</string>
    <string name="button_go_to_register">Ich habe noch kein Konto</string>
    <string name="button_log_in">Login</string>
    <string name="button_log_out">Logout</string>
    <string name="button_ready_for_select_secret_santas">Ich bin bereit zum Wichteln!</string>
    <string name="button_register">Registrieren</string>
    <string name="button_select_secret_santas">Secret Santas bestimmen</string>
    <string name="button_show_selected_secret_santa">Du wichtelst für...</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="db_secret_santa">secret_santa</string>
    <string name="db_selected_secret_santa">selected_secret_santa</string>
    <string name="db_user">user</string>
    <string name="db_user_secret_santa">user_secret_santa</string>
    <string name="db_wish">wish</string>
    <string name="default_web_client_id">18741852671-usj84ioducrh917jr7qvcmo70re9i9vb.apps.googleusercontent.com</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="firebase_database_url">https://secret-santa-7e565.firebaseio.com</string>
    <string name="gcm_defaultSenderId">18741852671</string>
    <string name="google_api_key">AIzaSyCac5RvelWWMR3C4d9LkT3PHA07-uu6Xvg</string>
    <string name="google_app_id">1:18741852671:android:827d266d27893ec11a0fca</string>
    <string name="google_crash_reporting_api_key">AIzaSyCac5RvelWWMR3C4d9LkT3PHA07-uu6Xvg</string>
    <string name="google_storage_bucket">secret-santa-7e565.appspot.com</string>
    <string name="header_add_secret_santa">Secret Santa erstellen</string>
    <string name="header_log_in">Login</string>
    <string name="header_main">Herzlich Willkommen!</string>
    <string name="header_register">Herzlichen Willkommen zu MySecretSantas!</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hint_enter_budget">Gib das Budget für dein Secret Santa ein.</string>
    <string name="hint_enter_date">Gib das Datum für dein Secret Santa ein.</string>
    <string name="hint_enter_mail">Gib deine Mailadresse ein.</string>
    <string name="hint_enter_name">Gib deinen Namen an.</string>
    <string name="hint_enter_name_secret_santa">Gib den Namen für dein Secret Santa ein.</string>
    <string name="hint_enter_password">Gib dein Passwort ein.</string>
    <string name="hint_enter_place">Gib den Ort für dein Secret Santa ein.</string>
    <string name="hint_enter_wish">Ich wünsche mir...</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="info_add_secret_santa">Wähle unten einfach eines deiner Secret Santas aus oder erstelle mit dem Pluszeichen einfach dein Eigenes!</string>
    <string name="info_log_in">Melde dich einfach mit deinen Daten an und schon kannst du auf deine Secret Santas zugreifen!</string>
    <string name="info_main_1">Hier werden deine bisherigen Secret Santas angezeigt. Falls du noch keins hast, melde dich zu einem an oder erstelle ein eigenes!</string>
    <string name="info_main_2">Ist das Secret Santa, das du suchst noch nicht dabei?</string>
    <string name="info_main_3">Oder möchtest du ein neues Secret Santa erstellen?</string>
    <string name="info_register">Melde dich einfach mit deinem Namen, deiner Mailadresse und einem Passwort an! Danach kannst du ein Wichteln erstellen oder einem beitreten!</string>
    <string name="info_secret_santa">Hier kannst du Teilnehmer zum Secret Santa hinzufügen, deinen Wunsch eintragen und, wenn das alle gemacht haben, auch losen!</string>
    <string name="item_view_role_description">Tab</string>
    <string name="label_enter_budget">Budget</string>
    <string name="label_enter_date">Datum</string>
    <string name="label_enter_mail">Mailadresse</string>
    <string name="label_enter_name">Name</string>
    <string name="label_enter_name_secret_santa">Name</string>
    <string name="label_enter_password">Passwort</string>
    <string name="label_enter_place">Ort</string>
    <string name="label_user_secret_santa">Teilnehmer</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_content_description">More than %1$d new notifications</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select a Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
    <string name="mtrl_picker_range_header_selected">%1$s – %2$s</string>
    <string name="mtrl_picker_range_header_title">Select a Date Range</string>
    <string name="mtrl_picker_range_header_unselected">Start date – End date</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_text_input_date_hint">Date</string>
    <string name="mtrl_picker_text_input_date_range_end_hint">End date</string>
    <string name="mtrl_picker_text_input_date_range_start_hint">Start date</string>
    <string name="mtrl_picker_text_input_day_abbr">d</string>
    <string name="mtrl_picker_text_input_month_abbr">m</string>
    <string name="mtrl_picker_text_input_year_abbr">y</string>
    <string name="mtrl_picker_toggle_to_calendar_input_mode">Switch to calendar input mode</string>
    <string name="mtrl_picker_toggle_to_day_selection">Tap to switch to selecting a day</string>
</resources>