<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent">
        <EditText android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/colorFont" android:gravity="center" android:id="@+id/editTextEnterDate" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_enter_date" android:inputType="text" android:textAlignment="center" android:layout_marginStart="30dp" android:layout_marginEnd="30dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="1" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.75"/>
        <EditText android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/colorFont" android:gravity="center" android:id="@+id/editTextEnterPlace" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_enter_place" android:inputType="text" android:textAlignment="center" android:layout_marginStart="30dp" android:layout_marginEnd="30dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="1" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.6"/>
        <EditText android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/colorFont" android:gravity="center" android:id="@+id/editTextEnterBudget" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_enter_budget" android:inputType="text" android:textAlignment="center" android:layout_marginStart="30dp" android:layout_marginEnd="30dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="1" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.45"/>
        <EditText android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/colorFont" android:gravity="center" android:id="@+id/editTextEnterNameSecretSanta" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_enter_name_secret_santa" android:inputType="text" android:textAlignment="center" android:layout_marginStart="16dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="1" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.3"/>
        <Button android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/colorFont" android:gravity="center" android:id="@+id/buttonAddNewSecretSanta" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/button_add_new_secret_santa" android:layout_marginStart="30dp" android:layout_marginEnd="30dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.15"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
