<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent">
        <Button android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/colorFont" android:id="@+id/buttonLogOut" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="1dp" android:text="@string/button_log_out" android:layout_marginEnd="20dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.99" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.005"/>
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/colorFont" android:id="@+id/textViewHeaderMain" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="1dp" android:text="@string/header_main" android:textAlignment="center" android:layout_marginStart="20dp" android:layout_marginEnd="20dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.1"/>
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/colorFont" android:id="@+id/textViewInfoMain1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="1dp" android:text="@string/info_main_1" android:textAlignment="center" android:layout_marginStart="20dp" android:layout_marginEnd="20dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textViewHeaderMain" app:layout_constraintVertical_bias="0.05"/>
        <ListView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:id="@+id/listViewJoinedSecretSantas" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="1dp" android:layout_marginStart="10dp" android:layout_marginEnd="10dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textViewInfoMain1" app:layout_constraintVertical_bias="0.05"/>
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/colorFont" android:id="@+id/textViewInfoMain3" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/info_main_3" android:textAlignment="center" android:layout_marginStart="20dp" android:layout_marginEnd="20dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.85"/>
        <Button android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textColor="@color/colorFont" android:id="@+id/buttonAddSecretSanta" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="1dp" android:text="@string/button_add_secret_santa" android:layout_marginStart="20dp" android:layout_marginEnd="20dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textViewInfoMain3" app:layout_constraintVertical_bias="0.25"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
